# adaptive-agent-orchestrator

./: .gitignore  CLAUDE.md  PROJECT_LOG.md  PROJECT_STATE.md  README.md  ask.py  pyproject.toml
.claude/phase-specs/: phase-08-real-time-watch.md  phase-09-task-router.md  phase-09a-runtime-mode-cleanup-contract.md  phase-10-runtime-policy-enforcement.md  phase-11-recovery-playbook.md  phase-12-claude-code-worker-bridge.md  phase-12a-ecc-integration-pack.md  phase-13-planning-council.md  phase-14-memory-layer.md  phase-15-langgraph-runner.md  phase-16-golden-scenario-suite.md  phase-17-demo-readme-release.md
.claude/project-skills/: aao-boundary-test-designer.md  aao-core-builder.md  aao-live-visibility.md  aao-phase-handoff.md  aao-scope-guard.md  (+2 more)
docs/: architecture.md  claude_code_learnings.md  design_execution_fabric.md  design_multi_model_planning_council.md  ecosystem_architecture_v2.md  growth_path.md  market_signals_and_skill_focus.md  next_session_handoff.md  project_relationships.md  workflow_evolution.md
examples/: code_reviewer_agent.py  policy.yaml
tests/: test_cli_output.py  test_control_models.py  test_control_plane.py  test_control_plane_integration.py  test_evidence_pack.py  test_failure_taxonomy.py  test_guardrails.py  test_live_view.py  test_policy.py  test_recovery.py  test_runtime_smoke.py  test_sales_preview.py  test_task_router.py
workflows/: code_review_pipeline.yaml  customer_support_brief.yaml  deep_research.yaml  deep_research_human_review.yaml  deep_research_real.yaml  deep_research_supervised.yaml  quick_search.yaml  real_research.yaml
(+73 files in other folders)
